force-app/main/default/objects/Lead/fields/amelia__c.field-meta.xml
<CustomField>
    <fullName>amelia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>amelia</label>
    <type>Checkbox</type>
</CustomField>