force-app/main/default/objects/Lead/fields/CTC_BestEmail__c.field-meta.xml
<CustomField>
    <fullName>CTC_BestEmail__c</fullName>
    <description>best email for lead</description>
    <inlineHelpText>best email for lead</inlineHelpText>
    <label>Best Email</label>
    <type>Email</type>
</CustomField>