force-app/main/default/objects/Lead/fields/CTC_DemoPhone__c.field-meta.xml
<CustomField>
    <fullName>CTC_DemoPhone__c</fullName>
    <description>best contact phone</description>
    <inlineHelpText>best contact phone</inlineHelpText>
    <label>Demo Phone</label>
    <type>Phone</type>
</CustomField>