force-app/main/default/objects/Lead/fields/CTC_DescriptionOfProspect__c.field-meta.xml
<CustomField>
    <fullName>CTC_DescriptionOfProspect__c</fullName>
    <label>Description of Prospect</label>
    <type>TextArea</type>
</CustomField>