force-app/main/default/objects/Lead/fields/Graduation_Speech_Excerpt__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Speech_Excerpt__c</fullName>
    <label>Graduation Speech Excerpt</label>
    <type>TextArea</type>
</CustomField>