force-app/main/default/objects/Lead/fields/Nicks_birthdate__c.field-meta.xml
<CustomField>
    <fullName>Nicks_birthdate__c</fullName>
    <label>Nicks birthdate</label>
    <type>Date</type>
</CustomField>