force-app/main/default/objects/Lead/fields/Test1__c.field-meta.xml
<CustomField>
    <fullName>Test1__c</fullName>
    <description>testing purposes only</description>
    <label>Test1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>