force-app/main/default/objects/Lead/fields/Yesterdays_Date__c.field-meta.xml
<CustomField>
    <fullName>Yesterdays_Date__c</fullName>
    <label>Yesterdays Date</label>
    <type>Date</type>
</CustomField>